# f1tenth-software-stack

./: .gitignore  .gitmodules  LICENSE  README.md
SLAM & Trajectories/: readme.txt
SLAM & Trajectories/levine_2nd/: centerline.csv  inner_bound.csv  inner_bound.npy  lane_0.csv  lane_1.csv  levine_2nd.pgm  levine_2nd_modified.pgm  outer_bound.csv  outer_bound.npy  track.csv  track.npy  traj_race_cl.csv
SLAM & Trajectories/skir_2_draw/: centerline.csv  inner_bound.csv  inner_bound.npy  outer_bound.csv  outer_bound.npy  skir_2_draw.yaml  skir_2_draw_short.pgm  track.csv  track.npy  traj_race_cl.csv
bringup/: CMakeLists.txt  package.xml
bringup/config/: new_conf.rviz  real_rviz_config.rviz
bringup/launch/: final_race_real_launch.py  final_race_sim_launch.py  levine_real_launch.py  levine_sim_launch.py  real_bringup_launch.py  sim_bringup_launch.py
csv_data/: 0420_best.csv  border06.csv  border07.csv  combined.csv  dm_2.csv  levine_2nd.csv  m_acc_5.csv  m_acc_7.csv  m_acc_8.csv  readme.txt  short_black_tube.csv  skir_width_035.csv  skirk_slam.csv
gap_follow/: CMakeLists.txt
gap_follow/scripts/: motion_planning_reactive_node.py  reactive_node.py
lab1_pkg/: CMakeLists.txt  package.xml
lab1_pkg/launch/: lab1_launch.py
lab1_pkg/scripts/: relay.py  talker.py
lab6_pkg/: CMakeLists.txt
lab6_pkg/lab6_pkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lab6_pkg/scripts/: motion_planning_pure_pursuit_node.py  rrt_node.py
lqr/: CMakeLists.txt  package.xml  setup.cfg  setup.py
lqr/scripts/: lqr_node.py  utils.py
map_data/: .~lock.levine_2nd.csv#  border_half_meter.csv  m_acc_6.csv  pgm_modified.csv  skir_2_draw mod_speed.csv  skir_2_draw.pgm  skir_2_draw.yaml  skir_2_draw_obs.pgm  skir_2_draw_obs.yaml
mega_dagger_agent/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mega_dagger_agent/maps/: skir_mega_dagger.pgm  skir_mega_dagger.yaml
mega_dagger_agent/models/: bc.pkl  dagger.pkl  hg_dagger.pkl  mega_dagger.pkl
mega_dagger_agent/scripts/: agent_mlp.py  agent_node.py  collision_models.py  fake_scan_node.py  laser_models.py  oppo_node.py
mega_dagger_agent/trajs/: lane_2_traj_race_cl.csv  lane_2_traj_race_cl_optimal.csv
mpc/: CMakeLists.txt  package.xml
mpc/scripts/: mpc_node.py
pure_pursuit/: CMakeLists.txt
pure_pursuit/map_data/: levine_2nd.yaml
pure_pursuit/scripts/: motion_planning_pure_pursuit_node.py  pure_pursuit_node.py  pure_pursuit_node_spd_pt.py  speed_point_pure_pursuit_node.py
rl_planner/: 30_model.pt  33_model.pt  610_model.pt  README.md  min_lidar_30_model.pt  run_rl_planner.py
rl_planner/levine/: levine_rl.yaml
rl_planner/ppo_with_noise/: noise_reward_329.pt  noise_reward_370.pt  noise_reward_564.pt
safety_node/scripts/: safety_node.py
traj_gen/: readme.txt
traj_gen/levine_2nd/: lane_0.csv  outer_bound.csv  outer_bound.npy  team6_slam.yaml  track.npy
wall_follow/: CMakeLists.txt
wall_follow/scripts/: wall_follow_node.py
(+8 files in other folders)
